--- a/estructura de archivos/views/cart.html
+++ b/estructura de archivos/views/cart.html
@@ -121,7 +121,29 @@
         </section>
     </main>
     <footer>
-
+        <div class="footer--logo">
+            <a href="/index"><img src="/images/logo2.png" alt="Logo"></a>
+        </div>
+        <section class="footer__formas-de-pago">
+            <a href="https://www.visa.com.ar"><img src="/images/Visa.png" alt="Visa"></a>
+            <a href="https://www.mastercard.com.ar/es-ar.html"><img src="/images/Mastercard.png" alt="Mastercard"></a>
+            <a href="https://www.americanexpress.com/es-ar/"><img src="/images/American express.png" alt="American Express"></a>
+            <a href="https://www.naranjax.com"><img src="/images/Naranja.png" alt="Naranja"></a>
+            <a href="https://www.mercadopago.com.ar/home"><img src="/images/mercadopago.jpg" alt="Mercadopago"></a>
+            <a href="https://www.nativanacion.com.ar"><img src="/images/Nativa.jpg" alt="Nativa"></a>
+            <a href="https://www.redlink.com.ar"><img src="/images/Red Link.png" alt="Red Link"></a>
+        </section>
+        <section class="footer__lastsection">
+            <nav class="footer__lastsection__navbar">
+                <ul>
+                    <li>Sobre nosotros</li>
+                    <li>Contactanos</li>
+                    <li>Politicas de privacidad</li>
+                    <li>Ayuda</li>
+                </ul>
+            </nav>
+            <p class="footer__lastsection__copyright">Copyright © 2022 DALF-STORE</p>
+        </section>
     </footer>
     <script src="/js/glider.js"></script>
     <script>
