--- a/estructura de archivos/public/css/index.css
+++ b/estructura de archivos/public/css/index.css
@@ -86,9 +86,10 @@ h2 {
 
 .main__section--product-content_offers {
     background-color: #3d47a0;
+    border-top: solid 1px #2b2d32;
     display: flex;
     flex-direction: column;
-    padding-left: 10px;
+    padding: 10px;
 }
 
 .main-section-price-ofert {
@@ -97,10 +98,10 @@ h2 {
 
 .main__section--product-content {
     background-color: #3d47a0;
+    border-top: solid 1px #2b2d32;
     display: flex;
     flex-direction: column;
-    padding-left: 10px;
-    padding-top: 5px;
+    padding: 10px;
 }
 
 .main__section--product-description {
@@ -112,14 +113,14 @@ h2 {
     color: rgb(232, 14, 141);
     padding-left: 5px;
     padding-top: 5px;
-    width: 46%;
+    width: 100%;
 }
 
 .main__section--product-ubication {
     font-size: 11px;
     color: #b0b2b7;
     padding-left: 5px;
-    width: 54%
+    width: 100%
 }
 
 .main__section--product-price {
@@ -161,6 +162,10 @@ h2 {
 .main--carousel-p-color {
     color: black;
     background-color: #6061641c;
+}
+
+.main__section--product-img {
+    height: 202.8px;
 }
 
 
