--- a/estructura de archivos/views/index.html
+++ b/estructura de archivos/views/index.html
@@ -65,63 +65,63 @@
         <h2>Oferta del Día</h2>
         <section class="main__section--product ">
             <article class="main__section--product-article ">
-                <img src="/images/xbox-key.jpeg " alt="xbox-key ">
+                <img src="/images/gift-card-playstation.jpeg " alt="xbox-key ">
                 <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
                 <div class="main__section--product-content_offers ">
                     <div class="main-section-global-region ">
-                        <p class="main__section--product-region ">GLOBAL</p>
+                        <p class="main__section--product-region ">Estados Unidos</p>
                         <p class="main__section--product-ubication ">Desde</p>
                     </div>
                     <div class="main-section-price-ofert ">
                         <p class="main__section--product-price ">$ 9999</p>
                         <p class="main__section--product-discount ">5% OFF</p>
                     </div>
-                    <p class="main__section--product-description ">Xbox Microsoft Key</p>
+                    <p class="main__section--product-description ">PlayStation Network Card 75 USD (USA) PSN Key Estados Unidos</p>
+                </div>
+            </article>
+            <article class="main__section--product-article">
+                <img src="/images/RE2-card.jpeg" alt="xbox-key ">
+                <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
+                <div class="main__section--product-content_offers ">
+                    <div class="main-section-global-region ">
+                        <p class="main__section--product-region ">Argentina</p>
+                        <p class="main__section--product-ubication ">Desde</p>
+                    </div>
+                    <div class="main-section-price-ofert">
+                        <p class="main__section--product-price ">$ 9999</p>
+                        <p class="main__section--product-discount ">5% OFF</p>
+                    </div>
+                    <p class="main__section--product-description ">Resident Evil 2 Remake XBOX LIVE Key Argentina</p>
+                </div>
+            </article>
+            <article class="main__section--product-article">
+                <img src="/images/gtav-card.jpeg" alt="xbox-key ">
+                <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
+                <div class="main__section--product-content_offers ">
+                    <div class="main-section-global-region ">
+                        <p class="main__section--product-region ">Argentina</p>
+                        <p class="main__section--product-ubication ">Desde</p>
+                    </div>
+                    <div class="main-section-price-ofert">
+                        <p class="main__section--product-price ">$ 9999</p>
+                        <p class="main__section--product-discount ">5% OFF</p>
+                    </div>
+                    <p class="main__section--product-description ">Grand Theft Auto V: Premium Online Edition & Great White Shark Card Bundle XBOX LIVE Key Argentina</p>
                 </div>
             </article>
             <article class="main__section--product-article ">
-                <img src="/images/xbox-key.jpeg" alt="xbox-key ">
+                <img src="/images/steam-card.jpeg" alt="xbox-key ">
                 <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
                 <div class="main__section--product-content_offers ">
                     <div class="main-section-global-region ">
-                        <p class="main__section--product-region ">GLOBAL</p>
+                        <p class="main__section--product-region ">Argentina</p>
                         <p class="main__section--product-ubication ">Desde</p>
                     </div>
                     <div class="main-section-price-ofert ">
                         <p class="main__section--product-price ">$ 9999</p>
                         <p class="main__section--product-discount ">5% OFF</p>
                     </div>
-                    <p class="main__section--product-description ">Xbox Microsoft Key</p>
-                </div>
-            </article>
-            <article class="main__section--product-article ">
-                <img src="/images/xbox-key.jpeg " alt="xbox-key ">
-                <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
-                <div class="main__section--product-content_offers ">
-                    <div class="main-section-global-region ">
-                        <p class="main__section--product-region ">GLOBAL</p>
-                        <p class="main__section--product-ubication ">Desde</p>
-                    </div>
-                    <div class="main-section-price-ofert ">
-                        <p class="main__section--product-price ">$ 9999</p>
-                        <p class="main__section--product-discount ">5% OFF</p>
-                    </div>
-                    <p class="main__section--product-description ">Xbox Microsoft Key</p>
-                </div>
-            </article>
-            <article class="main__section--product-article ">
-                <img src="/images/xbox-key.jpeg " alt="xbox-key ">
-                <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
-                <div class="main__section--product-content_offers ">
-                    <div class="main-section-global-region ">
-                        <p class="main__section--product-region ">GLOBAL</p>
-                        <p class="main__section--product-ubication ">Desde</p>
-                    </div>
-                    <div class="main-section-price-ofert ">
-                        <p class="main__section--product-price ">$ 9999</p>
-                        <p class="main__section--product-discount ">5% OFF</p>
-                    </div>
-                    <p class="main__section--product-description ">Xbox Microsoft Key</p>
+                    <p class="main__section--product-description ">Tarjeta Regalo Steam 1000 ARS Clave Steam Argentina</p>
                 </div>
             </article>
         </section>
@@ -164,50 +164,54 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-        <h2>Juegos Recomendados Digitales</h2>
+        <h2>Juegos Recomendados (Digitales)</h2>
         <section class="main__section--product ">
             <article class="main__section--product-article ">
-                <img src="/images/xbox-key.jpeg " alt="xbox-key ">
+                <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
+                <img src="/images/eldenring-card.webp " alt="xbox-key ">
                 <div class="main__section--product-content ">
                     <div class="main-section-global-region ">
-                        <p class="main__section--product-region ">GLOBAL</p>
+                        <p class="main__section--product-region ">Argentina</p>
                         <p class="main__section--product-ubication ">Desde</p>
                     </div>
                     <p class="main__section--product-price ">$ 9999</p>
-                    <p class="main__section--product-description ">Xbox Microsoft Key</p>
+                    <p class="main__section--product-description ">Eldern Rin Código de XBOX LIVE Argentina</p>
                 </div>
             </article>
             <article class="main__section--product-article ">
-                <img src="/images/xbox-key.jpeg " alt="xbox-key ">
+                <img src="/images/minecraftjava-bedrockedition-card.webp" alt="xbox-key ">
+                <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
                 <div class="main__section--product-content ">
                     <div class="main-section-global-region ">
-                        <p class="main__section--product-region ">GLOBAL</p>
+                        <p class="main__section--product-region ">Argentina</p>
                         <p class="main__section--product-ubication ">Desde</p>
                     </div>
                     <p class="main__section--product-price ">$ 9999</p>
-                    <p class="main__section--product-description ">Xbox Microsoft Key</p>
+                    <p class="main__section--product-description ">Minecraft: Java & Bedrock Edition Official website Key Argentina</p>
                 </div>
             </article>
             <article class="main__section--product-article ">
-                <img src="/images/xbox-key.jpeg " alt="xbox-key ">
+                <img src="/images/megaman11-card.jpeg " alt="xbox-key ">
+                <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
                 <div class="main__section--product-content ">
                     <div class="main-section-global-region ">
-                        <p class="main__section--product-region ">GLOBAL</p>
+                        <p class="main__section--product-region ">Argentina</p>
                         <p class="main__section--product-ubication ">Desde</p>
                     </div>
                     <p class="main__section--product-price ">$ 9999</p>
-                    <p class="main__section--product-description ">Xbox Microsoft Key</p>
+                    <p class="main__section--product-description ">Mega Man 11 XBOX LIVE Key Argentina</p>
                 </div>
             </article>
             <article class="main__section--product-article ">
-                <img src="/images/xbox-key.jpeg " alt="xbox-key ">
+                <img src="/images/re4-card.jpeg " alt="xbox-key ">
+                <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
                 <div class="main__section--product-content ">
                     <div class="main-section-global-region ">
-                        <p class="main__section--product-region ">GLOBAL</p>
+                        <p class="main__section--product-region ">Argentina</p>
                         <p class="main__section--product-ubication ">Desde</p>
                     </div>
                     <p class="main__section--product-price ">$ 9999</p>
-                    <p class="main__section--product-description ">Xbox Microsoft Key</p>
+                    <p class="main__section--product-description ">Resident Evil 4 XBOX LIVE Key Argentina</p>
                 </div>
             </article>
         </section>
@@ -216,47 +220,51 @@
         <h2>Producto de nuestros usuarios</h2>
         <section class="main__section--product ">
             <article class="main__section--product-article ">
-                <img src="/images/xbox-key.jpeg " alt="xbox-key ">
+                <img class="main__section--product-img" src="/images/producto-de-usuario.webp" width="600px" height="202.8px" alt="xbox-key ">
+                <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
                 <div class="main__section--product-content ">
                     <div class="main-section-global-region ">
-                        <p class="main__section--product-region ">GLOBAL</p>
+                        <p class="main__section--product-region ">Argentina</p>
                         <p class="main__section--product-ubication ">Desde</p>
                     </div>
                     <p class="main__section--product-price ">$ 9999</p>
-                    <p class="main__section--product-description ">Xbox Microsoft Key</p>
+                    <p class="main__section--product-description ">Oculus Quest 2 Advanced All In One Casco Vr 128gb</p>
                 </div>
             </article>
             <article class="main__section--product-article ">
-                <img src="/images/xbox-key.jpeg " alt="xbox-key ">
+                <img class="main__section--product-img" src="/images/producto-de-usuario1.webp" alt="xbox-key ">
+                <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
                 <div class="main__section--product-content ">
                     <div class="main-section-global-region ">
-                        <p class="main__section--product-region ">GLOBAL</p>
+                        <p class="main__section--product-region ">Argentina</p>
                         <p class="main__section--product-ubication ">Desde</p>
                     </div>
                     <p class="main__section--product-price ">$ 9999</p>
-                    <p class="main__section--product-description ">Xbox Microsoft Key</p>
+                    <p class="main__section--product-description ">Teclado gamer Redragon Kumara K552 QWERTY Outemu Blue español latinoamérica color blanco con luz RGB</p>
                 </div>
             </article>
             <article class="main__section--product-article ">
-                <img src="/images/xbox-key.jpeg " alt="xbox-key ">
+                <img class="main__section--product-img" src="/images/producto-de-usuario2.webp " alt="xbox-key ">
+                <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
                 <div class="main__section--product-content ">
                     <div class="main-section-global-region ">
-                        <p class="main__section--product-region ">GLOBAL</p>
+                        <p class="main__section--product-region ">Argentina</p>
                         <p class="main__section--product-ubication ">Desde</p>
                     </div>
                     <p class="main__section--product-price ">$ 9999</p>
-                    <p class="main__section--product-description ">Xbox Microsoft Key</p>
+                    <p class="main__section--product-description ">Puesto Trabajo Gerencial Mod Argeno Jmi</p>
                 </div>
             </article>
             <article class="main__section--product-article ">
-                <img src="/images/xbox-key.jpeg " alt="xbox-key ">
+                <img class="main__section--product-img" src="/images/producto-de-usuario3.webp " alt="xbox-key ">
+                <div class="main__section--product-favorite "><i class="fa-regular fa-heart "></i></div>
                 <div class="main__section--product-content ">
                     <div class="main-section-global-region ">
-                        <p class="main__section--product-region ">GLOBAL</p>
+                        <p class="main__section--product-region ">Argentina</p>
                         <p class="main__section--product-ubication ">Desde</p>
                     </div>
                     <p class="main__section--product-price ">$ 9999</p>
-                    <p class="main__section--product-description ">Xbox Microsoft Key</p>
+                    <p class="main__section--product-description ">Monitor gamer curvo Samsung F390 Series C24F390FH led 24 " black high glossy 100V/240V</p>
                 </div>
             </article>
         </section>
