--- a/estructura de archivos/views/login.html
+++ b/estructura de archivos/views/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/ae7c764a16.js" crossorigin="anonymous"></script>
 
     <title>LOGIN</title>
@@ -27,11 +27,11 @@
                     <form action="">
                         <article class="email">
                             <i class="fa-solid fa-paper-plane"></i><label for="email">Email:</label>
-                            <input type="email" placeholder="Ingresá tu Email" id="email" name="email" required>
+                            <input type="email" placeholder="Ingresá tu email" id="email" name="email" required>
                         </article>
                         <article class="password">
                             <i class="fa-solid fa-keyboard"></i><label for="password">Contraseña:</label>
-                            <input type="password" placeholder="Ingresá tu Contraseña" id="password" name="password" minlength="8" maxlength="25" required>
+                            <input type="password" placeholder="Ingresá tu contraseña" id="password" name="password" minlength="8" maxlength="25" required>
                         </article>
                         <article class="rememberMe">
                             <label for="remember">Recordarme</label>
