--- a/estructura de archivos/views/register.html
+++ b/estructura de archivos/views/register.html
@@ -10,55 +10,56 @@
     <title>REGISTER</title>
 </head>
 <body>
-    <header>
-        <div class="header__container">
-            <section class="header__container--register">
-                <div class="register">
+    <div class="body__container1">
+        <header>
+            <div class="header__container1">
+                <section class="header__container--register1">
                     <h2>REGISTRARSE</h2>
-                </div>
-            </section>
-            <section class="header__container--loginPage">
-                <div class="loginPage">
-                    <a href="/login"><h2>INICIAR SESIÓN</h2></a>
-                </div>
-            </section>
-        </div>
-    </header>
-    <main>
-        <div class="main__container">
-            <section class="main__container--form">
-                <form action="">
-                    <p>
-                        <label for="name">Nombre Completo:</label>
-                        <input type="text" name="name" id="name">
-                    </p>
-                    <p>
-                        <label for="email">Email:</label>
-                        <input type="email" name="email" id="email">
-                    </p>
-                    <p>
-                        <label for="username">Nombre de Usuario:</label>
-                        <input type="text" name="username" id="username">
-                    </p>
-                    <p>
-                        <label for="password">Contraseña:</label>
-                        <input type="password" name="password" id="password">
-                    </p>
-                    <p>
-                        <label for="repass">Confirmar Contraseña:</label>
-                        <input type="repass" name="repass" id="repass">
-                    </p>
-                    <input type="submit" value="CREAR CUENTA" class="input--createAcc">
-                </form>
-            </section>
-        </div>
-    </main>
-    <footer>
-        <div class="footer__container">
-            <section class="footer__container--loginPage">
-                <p>¿Ya tenés una cuenta? <a href="/login">¡Iniciá sesión!</a></p>
-            </section>
-        </div>
-    </footer>
+                </section>
+                <section class="header__container--login1">
+                    <a href="/login"> <h2>INICIAR SESIÓN</h2></a>
+                </section>
+            </div>
+        </header>
+        <main>
+            <div class="main__container1">
+                <section class="main__container--data1">
+                    <form action="">
+                        <article class="fullName1">
+                            <i class="fa-solid fa-user"></i><label for="name">Nombre Completo:</label>
+                            <input type="text" placeholder="Ingresá tu nombre completo" id="name" name="name" required>
+                        </article>
+                        <article class="email1">
+                            <i class="fa-solid fa-paper-plane"></i><label for="email">Email:</label>
+                            <input type="email" placeholder="Ingresá tu email" id="email" name="email" required>
+                        </article>
+                        <article class="userName1">
+                            <i class="fa-solid fa-user-astronaut"></i><label for="username">Nombre de Usuario:</label>
+                            <input type="text" placeholder="Elegí tu nombre de usuario" id="username" name="username" required>
+                        </article>
+                        <article class="password1">
+                            <i class="fa-solid fa-keyboard"></i><label for="password">Contraseña:</label>
+                            <input type="password" placeholder="Ingresá tu contraseña" id="password" name="password" minlength="8" maxlength="25" required>
+                        </article>
+                        <article class="rePass1">
+                            <i class="fa-solid fa-unlock-keyhole"></i><label for="repass">Confirmar Contraseña:</label>
+                            <input type="repass" placeholder="Reingresá tu contraseña" id="repass" name="repass" required>
+                        </article>
+                        <input type="submit" value="CREAR CUENTA">
+                    </form>
+                </section>
+            </div>
+        </main>
+        <footer>
+            <div class="footer__container1">
+                <section class="footer__container1--loginPage">
+                    <div class="loginPage">
+                        <p>¿Ya tenés una cuenta?</p>
+                        <a href="/login">¡Iniciá sesión!</a>
+                    </div>
+                </section>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
